Revert "feat) 회원가입기능 (toentity 함수 수정 )"
This reverts commit 4144088242a71bb80cd09034a6a7c27319dfc1aa.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   # DB 연결 정보
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://<host>:3306/idea-market
+    url: jdbc:mysql://localhost:3306/idea-market
     username: root
-    password: <host>
+    password: root1234
 
   # JPA 설정
   jpa:
@@ -19,4 +19,4 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
